--- a/client/package.json
+++ b/client/package.json
@@ -7,18 +7,29 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "@feathersjs/authentication-client": "^4.5.9",
+    "@feathersjs/feathers": "^4.5.9",
+    "@feathersjs/socketio-client": "^4.5.9",
+    "@vue/composition-api": "^1.0.0-beta.18",
+    "core-js": "^3.6.5",
+    "feathers-hooks-common": "^5.0.4",
+    "feathers-vuex": "^3.13.0",
+    "socket.io-client": "^2.3.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
-    "vuex": "^4.0.0-0"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.5.8",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "babel-loader": "^8.1.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-vuetify": "~2.0.7"
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-cli": "^4.1.0"
   }
 }
