--- a/server/package.json
+++ b/server/package.json
@@ -24,15 +24,15 @@
     "npm": ">= 3.0.0"
   },
   "scripts": {
-    "test": "npm run lint && npm run jest",
-    "lint": "eslint src/. test/. --config .eslintrc.json --fix",
+    "test": "npm run lint && npm run mocha",
+    "lint": "standard",
     "dev": "nodemon src/",
     "start": "node src/",
-    "jest": "jest  --forceExit"
+    "mocha": "mocha test/ --recursive --exit"
   },
   "standard": {
     "env": [
-      "jest"
+      "mocha"
     ],
     "ignore": []
   },
@@ -51,14 +51,14 @@
     "feathers-mongoose": "^8.3.1",
     "helmet": "^4.1.1",
     "mongodb-core": "^3.2.7",
-    "mongoose": "^5.10.9",
+    "mongoose": "^5.10.11",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "axios": "^0.20.0",
-    "eslint": "^7.11.0",
-    "jest": "^26.5.3",
-    "nodemon": "^2.0.5"
+    "axios": "^0.21.0",
+    "mocha": "^8.2.0",
+    "nodemon": "^2.0.6",
+    "standard": "^15.0.1"
   }
 }
